# CS333FinalProj

./: .coverage  README.md  average.py  main.py  pyproject.toml  sort.py  testintegration.py
.github/workflows/: python-package.yml
batchScheduling/src/: batchSchedulingComparison.py  proc.py  sort.py
batchScheduling/tests/: test_average.py  test_integration.py  test_proc.py
src/batchSchedulingComparison/: batchSchedulingComparison.py  testaverage.py  testfile.txt  testintegration.py  testproc.py
tests/: test_integration.py  testaverage.py  testintegration.py  testproc.py
