[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "batchSchedulingComparison"
version = "0.0.2"
authors = [
  { name="Misha Desear", email="mjdesear@example.com" },
]
description = "A small application that takes a .txt file as input 
              containing process information and calculates process execution,
              average arrival, and average completion time based on an inputted
              scheduling algorithm (FCFS, Shortest Job First, or Priority Sort)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"