[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "batchSchedulingComparison"
version = "0.0.3"
authors = [
  { name="Misha Desear", email="mjdesear@example.com" },
]
description = "Small application that takes in a list of processes and prints order of execution, average wait time, and average turnaround time"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"